добавила файл nojekyll

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul class="profile__list">
             <li class="profile__list-item">
               <img
-                src="./images/Jacques-Yves Cousteau.jpg"
+                src="./images/Cousteau.jpg"
                 alt="Жак-Ив Кусто"
                 class="profile__avatar"
               />
@@ -98,7 +98,7 @@
           <article class="element">
             <div class="element__rectangle"></div>
             <img
-              src="./images/mount Elbrus.png"
+              src="./images/Elbrus.png"
               alt="Гора Эльбрус"
               class="element__image"
             />
@@ -153,11 +153,7 @@
       </footer>
       <div class="popup">
         <form class="popup__container">
-          <img
-            src="./images/Close Icon.png"
-            alt="Закрыть"
-            class="popup__icon"
-          />
+          <img src="./images/CloseIcon.png" alt="Закрыть" class="popup__icon" />
           <h2 class="popup__title">Редактировать профиль</h2>
           <input type="text" class="popup__input-name" value="Жак-Ив Кусто" />
           <input
