добавила две картинки

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <article class="element">
             <img
-              src="./images/dombai.png"
+              src="./images/Dombai.png"
               alt="Домбай"
               class="element__image"
             />
@@ -118,7 +118,7 @@
 
           <article class="element">
             <img
-              src="./images/moscow.jpg"
+              src="./images/Moscow.jpg"
               alt="Москва"
               class="element__image"
             />
