правки по JS и input в попапе

--- a/index.html
+++ b/index.html
@@ -166,18 +166,17 @@
               class="popup__icon"
             />
           </button>
-
           <h2 class="popup__title">Редактировать профиль</h2>
           <input
             type="text"
             name="forename"
-            class="popup__input-name popup__input_form"
+            class="popup__input popup__input_name"
             value=""
           />
           <input
             type="text"
             name="occupation"
-            class="popup__input-aboutme popup__input_form"
+            class="popup__input popup__input_aboutme"
             value=""
           />
           <button class="popup__button">Сохранить</button>
