--- a/index.html
+++ b/index.html
@@ -51,112 +51,13 @@
           </ul>
         </section>
 
-        <section class="elements">
-          <article class="element">
-            <img src="./images/ufa.jpg" alt="Уфа" class="element__image" />
-            <div class="element__group">
-              <h2 class="element__title">Уфа</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-
-          <article class="element">
-            <img src="./images/crimea.jpg" alt="Крым" class="element__image" />
-            <div class="element__group">
-              <h2 class="element__title">Крым</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-
-          <article class="element">
-            <img
-              src="./images/Dombai.png"
-              alt="Домбай"
-              class="element__image"
-            />
-            <div class="element__group">
-              <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-
-          <article class="element">
-            <img
-              src="./images/e.png"
-              alt="Гора Эльбрус"
-              class="element__image"
-            />
-            <div class="element__group">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-
-          <article class="element">
-            <img
-              src="./images/Moscow.jpg"
-              alt="Москва"
-              class="element__image"
-            />
-            <div class="element__group">
-              <h2 class="element__title">Москва</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-
-          <article class="element">
-            <img
-              src="./images/karachay.png"
-              alt="Карачаево-Черкесия"
-              class="element__image"
-            />
-            <div class="element__group">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button type="button" class="element__heart-click">
-                <img
-                  src="./images/heart.svg"
-                  alt="Лайкнуть фото"
-                  class="element__vector"
-                />
-              </button>
-            </div>
-          </article>
-        </section>
+        <section class="elements"></section>
       </main>
 
       <footer class="footer footer_indent">
         <p class="footer__author">&copy; 2020 Mesto Russia</p>
       </footer>
+
       <div class="popup">
         <form name="format" class="popup__container">
           <button type="button" class="popup__icon-click">
@@ -179,10 +80,79 @@
             class="popup__input popup__input_aboutme"
             value=""
           />
-          <button class="popup__button">Сохранить</button>
+          <button class="popup__button popup__button_top">Сохранить</button>
         </form>
       </div>
+
+      <div class="popup plus">
+        <form name="format" class="popup__container">
+          <button
+            type="button"
+            class="popup__icon-click popup__icon-click_plus"
+          >
+            <img
+              src="./images/closeicon.svg"
+              alt="Закрыть форму"
+              class="popup__icon"
+            />
+          </button>
+          <h2 class="popup__title">Новое место</h2>
+          <input
+            type="text"
+            name="forename"
+            class="popup__input popup__input_denomination"
+            value="Название"
+          />
+          <input
+            type="text"
+            name="occupation"
+            class="popup__input popup__input_link"
+            value="Ссылка на картинку"
+          />
+          <button class="popup__button">Создать</button>
+        </form>
+      </div>
+
+      <div class="popup card">
+        <div class="popup__group">
+          <button
+            type="button"
+            class="popup__icon-click popup__icon-click_card"
+          >
+            <img
+              src="./images/closeicon.svg"
+              alt="Закрыть фотокарточку"
+              class="popup__icon"
+            />
+          </button>
+          <img src="" alt="" class="popup__image-element" />
+          <p class="popup__plase"></p>
+        </div>
+      </div>
     </div>
+
+    <template id="elements">
+      <article class="element">
+        <button type="button" class="element__remove-click">
+          <img
+            src="./images/urn.svg"
+            alt="Удалить фотокарточку"
+            class="element__urn"
+          />
+        </button>
+        <img class="element__image" />
+        <div class="element__group">
+          <h2 class="element__title"></h2>
+          <button type="button" class="element__heart-click">
+            <img
+              src="./images/heart.svg"
+              alt="Лайкнуть фото"
+              class="element__vector"
+            />
+          </button>
+        </div>
+      </article>
+    </template>
     <script src="./scripts/script.js" defer></script>
   </body>
 </html>
